a11y: Add aria-label to search button
Before, screen readers would see the search button as a simply a button
with no context what it was for.

Now they can see it.

--- a/home.hbs
+++ b/home.hbs
@@ -16,7 +16,7 @@
                             </a>
                             <p class="gh-home-description">{{@site.description}}</p>
                         </div>
-                        <button class="gh-search gh-icon-btn" data-ghost-search>{{> "icons/search"}}</button>
+                        <button class="gh-search gh-icon-btn" aria-label="Search this site" data-ghost-search>{{> "icons/search"}}</button>
                     </header>
 
                     <section class="gh-home-subscribe">
