--- a/default.hbs
+++ b/default.hbs
@@ -29,7 +29,7 @@
                             {{/if}}
                         </a>
                     </div>
-                    <button class="gh-search gh-icon-btn" data-ghost-search>{{> "icons/search"}}</button>
+                    <button class="gh-search gh-icon-btn" aria-label="Search this site" data-ghost-search>{{> "icons/search"}}</button>
                     <button class="gh-burger"></button>
                 </div>
 
@@ -39,9 +39,9 @@
 
                 <div class="gh-head-actions">
                     {{#unless @site.members_enabled}}
-                        <button class="gh-search gh-icon-btn" data-ghost-search>{{> "icons/search"}}</button>
+                        <button class="gh-search gh-icon-btn" aria-label="Search this site" data-ghost-search>{{> "icons/search"}}</button>
                     {{else}}
-                        <button class="gh-search gh-icon-btn" data-ghost-search>{{> "icons/search"}}</button>
+                        <button class="gh-search gh-icon-btn" aria-label="Search this site" data-ghost-search>{{> "icons/search"}}</button>
                         <div class="gh-head-members">
                             {{#unless @member}}
                                 {{#unless @site.members_invite_only}}
