Fixed title/content overflow issue
refs https://github.com/TryGhost/Team/issues/3258

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -355,6 +355,7 @@ h6 {
     margin-top: 0.4rem;
     font-size: 2.4rem;
     font-weight: 800;
+    word-break: break-word;
 }
 
 .gh-card-link:hover .gh-card-title {
@@ -366,6 +367,7 @@ h6 {
     font-size: 1.7rem;
     line-height: 1.5;
     color: var(--color-secondary-text);
+    word-break: break-word;
 }
 
 .gh-article {
