Fixed announcement bar spacing

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -29,7 +29,7 @@ h6 {
     left: 0;
 }
 
-#announcement-bar-root + .gh-site .gh-home {
+#announcement-bar-root:not(:empty) + .gh-site .gh-home {
     padding-top: 48px;
 }
 
