feat: use site cover image as menu background (WIP)
files
=====
clean-up build
- .gitignore
- assets/built/screen.css

work around bug that displays gh-site div
- assets/css/screen.css

use url({{img_url @site.cover_image}}) as div bakground
(syntax copied from Casper theme)
- default.hbs (WIP => crop image)
- home.hbs

--- a/home.hbs
+++ b/home.hbs
@@ -4,7 +4,7 @@
     {{#if @site.members_enabled}}
         {{#unless @member}}
             <div class="gh-home">
-                <div class="gh-home-cta">
+                <div class="gh-home-cta" style="background-image: url({{img_url @site.cover_image}});background-repeat: no-repeat;background-size: cover; object-fit: cover;">
                     <header class="gh-home-head">
                         <div class="gh-home-brand">
                             <a class="gh-home-logo" href="{{@site.url}}">
