--- a/default.hbs
+++ b/default.hbs
@@ -18,7 +18,8 @@
     <div class="gh-site">
 
         <header id="gh-head" class="gh-head gh-outer">
-            <div class="gh-head-inner" style="background-image: url({{img_url @site.cover_image}}); background-repeat: no-repeat; background-size: cover;">
+            {{> background-cover background=@site.cover_image style="gh-head-inner"}}
+            {{!--Special background-cover.hbs partial to generate the background header image--}}
                 <div class="gh-head-brand">
                     <div class="gh-head-brand-wrapper">
                         <a class="gh-head-logo" href="{{@site.url}}">
