feat: set background_position as custom site parameter
files
=====
- package.json
  parameter setup
- partials/background-cover.hbs
  parameter use

--- a/partials/background-cover.hbs
+++ b/partials/background-cover.hbs
@@ -10,7 +10,7 @@
         background-image: url({{img_url background}});
         background-repeat: no-repeat;
         background-size: cover;
-        background-position: left 40%;
+        background-position: {{@custom.background_position}};
         /* object-fit: cover;*/
         /* object-position: 0 100% ; */
      }
